examples/neg/unhandled_under_handler.check
examples/neg/unhandled_under_handler.effekt:8:1:error: Unhandled effects: {Flip}
def main(): Unit / { Console } = {
^
